# srvar-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
assets/paper/: main.tex  table_1.tex  table_2.tex  table_3.tex  table_4.tex  table_5.tex
config/: fetch_fred_demo_config.yaml  ssp_demo_config.yaml
data/: NFCI.csv  T10Y2Y.csv  vintages_2005_2006.xlsx  vintages_2007_2010.xlsx  vintages_2011_2014.xlsx  vintages_2015_2018.xlsx  vintages_2019_2022.xlsx
data/WuXia/: WuXiaShadowRate.xlsx
data/spf_data/: meanGrowth.xlsx  meanLevel.xlsx  medianGrowth.xlsx
docs/: FAQ.md  Makefile  conf.py  index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  dataset.md  elb.md  index.md  plotting.md  results.md  spec.md  ssvs.md  sv.md  theme.md
docs/theory/: elb.md  mcmc.md  shadow-rate-var.md  stochastic-volatility.md  variable-selection.md
docs/user-guide/: backtesting.md  concepts.md  configuration.md  glossary.md  limitations.md
examples/: README.md  blasso.py  bvar_basic_fit_forecast.py  bvar_minnesota_fit_forecast.py  dl_fit_forecast.py  elb_fit_forecast.py  elb_sv_fit_forecast.py  elb_sv_fit_forecast_plots.py  phase2_bvar_fit_forecast.py  replicate_choose_var1.py  ssp_fit_forecast.py  sv_fit_forecast.py  var_utils.py
examples/_legacy/: phase0_smoke.py  phase1_var_utils.py  phase3_elb_fit_forecast.py  phase4_sv_elb_fit_forecast.py  phase4_sv_elb_fit_forecast_plots.py  (+3 more)
srvar/: __init__.py  api.py  bvar.py  cli.py  elb.py  linalg.py  metrics.py  plotting.py  results.py  rng.py  runner.py  samplers.py  samplers_blasso.py  samplers_dl.py  samplers_homoskedastic.py  samplers_ssp.py  samplers_svrw.py  spec.py  ssvs.py  sv.py  theme.py  var.py
tests/: conftest.py  test_api_invariants.py  test_blasso.py  test_blasso_integration.py  test_dataset.py  test_dl.py  test_elb.py  test_elb_phase3.py  test_fetch_fred.py  test_fred.py  test_imports.py  test_inverse_gaussian.py  test_linalg.py  test_minnesota_prior.py  test_phase2_end_to_end.py  test_property_based.py  test_runner_blasso.py  test_spec_blasso.py  test_spec_dl.py  test_ssp.py  test_ssvs.py  test_sv.py  test_transformations.py  test_var_utils.py
(+18 files in other folders)
