[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "srvar-toolkit"
version = "0.1.0"
description = "SRVAR toolkit inspired by Grammatikopoulos (2025)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "charles shaw", email = "charles@charlesshaw.net" },
]
keywords = ["bayesian", "var", "srvar", "macro", "forecasting", "time-series"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
  "mypy>=1.11",
  "pre-commit>=3.7",
]

cli = [
  "rich>=13",
  "tqdm>=4",
]

docs = [
  "sphinx>=7.2",
  "myst-parser>=2.0",
  "furo>=2024.8.6",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "sphinx-autodoc-typehints>=2.3",
]

plot = [
  "matplotlib>=3.8",
]

accel = [
  "numba>=0.60",
]

[project.scripts]
srvar = "srvar.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
  "E", "F", "I",
  "B",
  "UP",
  "NPY",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["srvar"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q --import-mode=prepend"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["srvar"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.sdist]
include = [
  "srvar/**",
  "tests/**",
  "examples/**",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["srvar"]
